# trial-php

./: .example.env  .gitignore  .gitmodules  app.php  attr.php  common.php  common_case.php  common_pdo.php  composer.json  docker-compose.yml  dockerfile  readme.md
bindemo/: pack.php  pack2.php  pack3.php
cmextdemo/: CMakeLists.txt  Readme.md
cmextdemo/phpext/: phpext.c
conf/: db.php  redis.php
config/: swoole.php
detials/: array_operation.php  date_and_time.php  exception_flow.php  filesystem_path.php  ini_setting.php  json_coding.php  magic_get_set.php  number_bc.php  number_float.php  number_formula.php  string_operation.php
extdemo/: .gitignore  config.m4  readme.md
httpcli/: app.php  composer.json  dockerfile
httpsrv/: app.php  composer.json  dockerfile  launch
hyperf/: readme.md
hyperf-nano/: app.php  composer.json  dockerfile  launch
hyperf-server/: Dockerfile  composer.json  docker-compose.yml  grpc.proto
image/: ensure.php
json_v_php/: loader.php  readme.md
list_v_dict/: column.php  intersect.php  operation.php
main/: Application.php  Db.php  Redis.php
memory/: usage.php
mysql/: my.cnf
ncase/: to.php
olddemo/: .dockerignore  .gitignore  common.php  common_case.php  common_image.php  composer.json  readme.md
pack/: vs_split.php
pdo/: mysql.php  sqlite_insert.php
phardemo/: .gitignore  readme.md  test.php
phpext/: config.w32  php_phpext.h  phpext.c
proc/: proc.php
public/: index.php
re_v_fn/: readme.md
redisearch/: create.php  insert.php  search.php
server/: .example.env  dockerfile
swoole/: .gitignore  docker-compose.yml  readme.md
tcpcli/: composer.json
tcpsrv/: app.php  composer.json  dockerfile
text/: vicword.php  zh.php
thinkphp6/: docker-compose.yml
tkormdemo/: composer.json  test1.php
(+113 files in other folders)
